# dice

./: .gitignore  CMakeLists.txt  README.md
cfg/: dasm.cmake.in  libdice.cmake.in  rolladie.cmake.in
dasm/: CMakeLists.txt
dasm/inc/: dasm.h
dasm/inc/dasm/: err.h  keys.h
dasm/lib/: asm.c  assembler.c  assembler.h  parser.c  parser.h  pp.c  pp.h  tokenizer.c  tokenizer.h
dasm/lib/lexer/: lexer.c  lexer.h  toks.c  toks.h
dasm/lib/pp/: pp.c  pp.h
dasm/preprocessor/: pp.c
dasm/test/: main.c
dasm/tokenizer/: tokenizer.c  tokenizer.h
dice/: CMakeLists.txt
dice-server/: CMakeLists.txt
dice-server/app/: main.c
dice-server/inc/: dice-server.h
dice/app/: main.c  tui.c
dice/app/tui/: tui.h
dice/inc/dice/: tui.h
dice/inc/dice/tui/: err.h
libdice/: CMakeLists.txt
libdice/inc/: libdice.h
libdice/inc/libdice/: abi.h  lookup.h  opcode.h  type.h
libdice/lib/: run.c  run_one.c
libdice/test/: dbg.c  example.c  run.c  run.cc
rolladie/: CMakeLists.txt
rolladie/inc/: rolladie.h
rolladie/inc/rolladie/: svr.h  uid64.auto.h  uid64.core.h  uid64.h
rolladie/lib/: a.c  svr.c
rolladie/src/rolladie/: uid64.def.c
